minot gitignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,6 @@ bin/
 imgui.ini
 
 # # Python Venv
-venv
+venv/
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
